@@ -16,6 +16,7 @@ along with this program; if not, see {http://www.gnu.org/licenses/}. */
 
 #include "start.h"
 #include "ui_start.h"
+
 #include <QTableWidgetItem>
 
 
@@ -29,8 +30,7 @@ Start::Start(QWidget *parent) :QWidget(parent),ui(new Ui::Start)
     ui->coreappsSection->setFixedHeight(ui->view->height());
     ui->speeddilalSection->setFixedHeight(ui->view->height());
 
-    on_reloadB_clicked();
-    on_reloadR_clicked();
+    reload();
 }
 
 Start::~Start()
@@ -41,53 +41,11 @@ Start::~Start()
 void Start::loadsettings()
 {
     ui->recentSection->setVisible(sm.getDisableRecent());
-    if (sm.getDisableRecent()) on_reloadR_clicked();
-}
-
-void Start::on_cleaRecent_clicked()
-{
-    ui->recents->clear();
-    sm.cSetting->remove("Recent");
-    on_reloadR_clicked();
 }
 
 void Start::on_recents_itemDoubleClicked(QTableWidgetItem *item)
 {
     openAppEngine(ui->recents->item(item->row(),1)->text());
-}
-
-void Start::on_reloadR_clicked()
-{
-    ui->recents->clear();
-
-    sm.cSetting->beginGroup("Recent");
-
-    QTableWidgetItem *item;
-    QStringList sList = sm.cSetting->childKeys();
-    QStringList r;
-    if (sList.count() > 30) {
-        int extra = sList.count() - 30;
-        for (int i = 0; i < extra; ++i) {
-            sList.removeAt(sList.indexOf(QString::number(i)));
-        }
-    }
-
-    ui->recents->setColumnCount(3);
-    ui->recents->setRowCount(sList.count());
-
-    for (int i = 0; i < sList.count(); ++i) {
-        r = sm.cSetting->value(sList.at(i)).toString().split("$$$");
-        item = new QTableWidgetItem(r.count() == 3 ? appsIconPath(r.at(0)) : appsIconPath(r.at(2)), r.at(0));
-        ui->recents->setItem(i, 0, item);
-        ui->recents->setItem(i, 1, new QTableWidgetItem(r.at(1)));
-        ui->recents->setItem(i, 2, new QTableWidgetItem(r.at(2)));
-    }
-    ui->recents->sortByColumn(2, Qt::DescendingOrder);
-
-    sm.cSetting->endGroup();
-
-    ui->recents->horizontalHeader()->setSectionResizeMode(1,QHeaderView::Stretch);
-    ui->recentSection->setFixedHeight(ui->view->height());
 }
 
 void Start::resizeEvent(QResizeEvent *event)
@@ -104,8 +62,9 @@ void Start::on_appCollect_itemDoubleClicked(QListWidgetItem *item)
     cBox->tabEngine(nameToInt(item->text()));
 }
 
-void Start::on_reloadB_clicked()
+void Start::reload()
 {
+    //reload speeddial bookmarks
     ui->speedDialB->clear();
     BookmarkManage bk;
     QStringList list = bk.getBookNames("Speed Dial");
@@ -116,11 +75,39 @@ void Start::on_reloadB_clicked()
             ui->speedDialB->addItem(new QListWidgetItem(geticon(bk.bookmarkPath("Speed Dial", list.at(i))), list.at(i)));
         }
     }
-}
 
-void Start::reload()
-{
-    on_reloadB_clicked();
-    on_reloadR_clicked();
+    //reload recent activities list
+    if (sm.getDisableRecent() == true){
+
+        ui->recents->clear();
+        sm.cSetting->beginGroup("Recent");
+
+        QTableWidgetItem *item;
+        QStringList sList = sm.cSetting->childKeys();
+        QStringList r;
+        if (sList.count() > 30) {
+            int extra = sList.count() - 30;
+            for (int i = 0; i < extra; ++i) {
+                sList.removeAt(sList.indexOf(QString::number(i)));
+            }
+        }
+
+        ui->recents->setColumnCount(3);
+        ui->recents->setRowCount(sList.count());
+
+        for (int i = 0; i < sList.count(); ++i) {
+            r = sm.cSetting->value(sList.at(i)).toString().split("$$$");
+            item = new QTableWidgetItem(r.count() == 3 ? appsIconPath(r.at(0)) : appsIconPath(r.at(2)), r.at(0));
+            ui->recents->setItem(i, 0, item);
+            ui->recents->setItem(i, 1, new QTableWidgetItem(r.at(1)));
+            ui->recents->setItem(i, 2, new QTableWidgetItem(r.at(2)));
+        }
+        ui->recents->sortByColumn(2, Qt::DescendingOrder);
+
+        sm.cSetting->endGroup();
+
+        ui->recents->horizontalHeader()->setSectionResizeMode(1,QHeaderView::Stretch);
+        ui->recentSection->setFixedHeight(ui->view->height());
+    }
 }
 
